--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -91,13 +91,13 @@
         <div class="row">
                 <div class="col-md-3">
                     <div class="panel panel-primary">
-                        <div class="panel-heading">Danh mục</div>
+                        <div class="panel-heading">Danh mục phòng</div>
                             @Html.Action("GetList", "Category")
                     </div>
                 </div>
                 <div class="col-md-9">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">Danh mục</div>
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">@RenderSection("ContentHeader")</div>
                         <div class="panel-body">
                             @RenderBody()
                         </div>
