--- a/MVCQLKS/MVCQLKS/Views/Category/_PartialList.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Category/_PartialList.cshtml
@@ -5,7 +5,7 @@
 <div class="list-group">
     @foreach (var c in Model)
     {
-        <a href="#" class="list-group-item">
+        <a href="@Url.Action("GetListByCategory","Room", new { catId = c.CatID})" class="list-group-item">
             @c.CatName
         </a>
     }
