--- a/MVCQLKS/MVCQLKS/Views/Room/ListByCategory.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Room/ListByCategory.cshtml
@@ -26,17 +26,24 @@ else
             <div class="thumbnail">
                 <div class="caption">
                     <h3>@p.RoomName</h3>
-                    <h4>Giá: @string.Format("{0:C}", @p.Price)</h4>
-                    <h4>Tình trạng: 
-                    @if (@p.Status > 0)
+                    @*<h4>Giá: @string.Format("{0:C}", @p.Price)</h4>*@
+                    <h4>Giá: @string.Format("{0:N0} đ", @p.Price)</h4>
+                    <p>
+                        Tình trạng:
+                        @if (@p.Status > 0)
                     {
-                        @:Đã cho thuê
+                            @:Đã cho thuê
                     }
                     else
                     {
-                        @:Còn trống
+                            @:Còn trống
                     }
-                    </h4>
+                    </p>
+                    <p>
+                        @*<a href="#" class="btn btn-primary" role="button" disabled="disabled">Thuê phòng</a>*@
+                        <a href="#" class="btn btn-default" role="button">Trả phòng</a>
+                        <a href="#" class="btn btn-primary" role="button">Thuê phòng</a>
+                    </p>
                 </div>
             </div>
         </div>
