--- a/MVCQLKS/MVCQLKS/Views/Account/Register.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Account/Register.cshtml
@@ -1,36 +1,44 @@
 ﻿@using MVCQLKS.Models
 
-@model User
+@model UserRegisting
+
+@section style{
+    <style type="text/css">
+        .error {
+            color: red;
+        }
+    </style>
+}
 
 @section ContentHeader{
     Đăng ký Tài khoản
 }
 
 <div class="row">
-    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal" }))
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", id = "frmRegister" }))
     {
         <div class="control-group">
-            @Html.LabelFor(m => m.f_UserName, "Tên Đăng nhập:", new { @class = "col-md-3 control-label" })
+            @Html.LabelFor(m => m.UserName, "Tên Đăng nhập:", new { @class = "col-md-3 control-label" })
             <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.f_UserName, new { @class = "form-control", placeholder = "Username" })
+                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "Username" })
             </div>
         </div>
         <div class="control-group">
-            @Html.LabelFor(m => m.f_Password, "Mật khẩu:", new { @class = "col-md-3 control-label" })
+            @Html.LabelFor(m => m.Password, "Mật khẩu:", new { @class = "col-md-3 control-label" })
             <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.f_Password, new { @class = "form-control", placeholder = "Password" })
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
             </div>
         </div>
         <div class="control-group">
-            @Html.LabelFor(m => m.f_Password, "Nhập lại Mật khẩu:", new { @class = "col-md-3 control-label" })
+            @Html.LabelFor(m => m.ConfirmPassword, "Nhập lại Mật khẩu:", new { @class = "col-md-3 control-label" })
             <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.f_Password, new { @class = "form-control", placeholder = "Confirm" })
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm" })
             </div>
         </div>
         <div class="control-group">
-            @Html.LabelFor(m => m.f_Name, "Họ tên:", new { @class = "col-md-3 control-label" })
+            @Html.LabelFor(m => m.Name, "Họ tên:", new { @class = "col-md-3 control-label" })
             <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.f_Name, new { @class = "form-control", placeholder = "Name" })
+                @Html.TextBoxFor(m => m.Name, new { @class = "form-control", placeholder = "Name" })
             </div>
         </div>
         <div class="form-group">
@@ -43,5 +51,31 @@
         </div>
     }
 </div>
+
+@section script{
+    <script src="~/Content/js/jquery.validate.min.js"></script>
+    <script type="text/javascript">
+        $("#frmRegister").validate({
+            rules: {
+                UserName: "required",
+                Password: {
+                    required: true,
+                    minlength: 4
+                },
+                ConfirmPassword: "required",
+                Name: "required",
+            },
+            messages: {
+                UserName: "Bạn cần điền Tên Đăng nhập!",
+                Password: {
+                    required: "Bạn cần điền Mật khẩu!",
+                    minlength: "Mật khẩu phải ít nhất 4 ký tự!"
+                },
+                ConfirmPassword: "Bạn cần xác nhận lại Mật khẩu!",
+                Name: "Bạn cần nhập Họ và tên!"
+            }
+        });
+    </script>
+}
 
 
