--- a/MVCQLKS/MVCQLKS/Views/Home/Index.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Home/Index.cshtml
@@ -1,7 +1,28 @@
-﻿
-@section ContentHeader{
+﻿@*@section ContentHeader{
     Index
 }
 
-<h2>Content</h2>
-
+<h2>Content</h2>*@
+@using MVCQLKS.Models
+@model IList<Room>
+@section ContentHeader{
+    Trang chủ
+}
+<div class="col-ms-12">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            3 phòng còn trống         
+        </div>
+        <div class="panel-body">
+            @Html.Action("HienThi3PhongConTrong", "Home")
+        </div>
+    </div>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+                3 phòng đã cho thuê
+        </div>
+        <div class="panel-body">
+            @Html.Action("HienThi3PhongDaChoThue", "Home")
+        </div>
+    </div>
+</div>
