--- a/MVCQLKS/MVCQLKS/Views/Room/ListByCategory.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Room/ListByCategory.cshtml
@@ -55,8 +55,7 @@ else
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 <li>
-                    <a href="?
-                       page=@(ViewBag.curPage-1)" aria-label="Previous">
+                    <a href="?page=@(ViewBag.curPage-1)" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
@@ -75,8 +74,7 @@ else
                 }
 
                 <li>
-                    <a href="?
-                       page=@(ViewBag.curPage+1)" aria-label="Next">
+                    <a href="?page=@(ViewBag.curPage+1)" aria-label="Previous">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
