--- a/MVCQLKS/MVCQLKS/Views/Room/Detail.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Room/Detail.cshtml
@@ -3,11 +3,11 @@
 
 @*@section stylesheet{
 
-}
+    }
 
-@section javascript{
+    @section javascript{
 
-}*@
+    }*@
 
 @section ContentHeader{
     Chi tiết phòng
@@ -15,10 +15,11 @@
 
 <div class="roư">
     @*<div class="col-sm-12">
-        <h3>Phòng @Model.RoomName</h3>
-    </div>*@
+            <h3>Phòng @Model.RoomName</h3>
+        </div>*@
     <div class="caption">
         <h3>Phòng @Model.RoomName</h3>
+        <h4>Loại phòng: @ViewBag.loaiPhong</h4>
         @*<h4>Giá: @string.Format("{0:C}", @p.Price)</h4>*@
         <h4>Giá: @string.Format("{0:N0} đ", @Model.Price)</h4>
         <p>
