Hiệu chỉnh hiển thị cho phòng và chi tiết phòng
Hiệu chỉnh hiển thị cho phòng và chi tiết phòng

--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -12,6 +12,13 @@
         @RenderSection("style")
     }
     <style type="text/css">
+        .caption-green {
+            color: forestgreen;
+        }
+
+        .caption-red {
+            color: red;
+        }
         .input-validation-error {
             border: 2px solid #f00;
             background-color: #fee;
