--- a/MVCQLKS/MVCQLKS/Views/Home/_Partial3PhongConTrong.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Home/_Partial3PhongConTrong.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MVCQLKS.Models
+@using MVCQLKS.Ultilities
 @model IList<Room>
 
 @section style{
@@ -25,9 +26,10 @@ else
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3>@p.RoomName</h3>
+                        <h3 class="caption-green">@Html.LessString(p.RoomName, 18)</h3>
                         @*<h4>Giá: @string.Format("{0:C}", @p.Price)</h4>*@
-                        <h4>Giá: @string.Format("{0:N0} đ", @p.Price)</h4>
+                        <h4 class="caption-red">Giá: @string.Format("{0:N0} đ", @p.Price)</h4>
+                        @*<h4 class="caption-red">Giá:  @Html.Price2String(p.Price)</h4>*@
                         <p>
                             Tình trạng:
                             @if (@p.Status > 0)
@@ -41,8 +43,8 @@ else
                         </p>
                         <p>
                             @*<a href="#" class="btn btn-primary" role="button" disabled="disabled">Thuê phòng</a>*@
-                            <a href="#" class="btn btn-default" role="button">Trả phòng</a>
-                            <a href="@Url.Action("Detail", "Room", new {id = p.RoomID })" class="btn btn-primary" role="button">Thuê phòng</a>
+                            <a href="@Url.Action("Detail", "Room", new {id = p.RoomID })" class="btn btn-default" role="button">Thuê phòng</a>
+                            <a href="#" class="btn btn-primary" role="button">Trả phòng</a>
                         </p>
                     </div>
                 </div>
