--- a/MVCQLKS/MVCQLKS/Views/Room/Detail.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Room/Detail.cshtml
@@ -1,13 +1,11 @@
 ﻿@using MVCQLKS.Models
 @model Room
 
-@*@section stylesheet{
+@section style{
+    <style type="text/css">
 
-    }
-
-    @section javascript{
-
-    }*@
+    </style>
+}
 
 @section ContentHeader{
     Chi tiết phòng
@@ -17,21 +15,21 @@
     @*<div class="col-sm-12">
             <h3>Phòng @Model.RoomName</h3>
         </div>*@
-    <div class="caption">
-        <h3>Phòng @Model.RoomName</h3>
-        <h4>Loại phòng: @ViewBag.loaiPhong</h4>
+    <div class="caption col-sm-12">
+        <h3 class="caption-green">Phòng @Model.RoomName</h3>
         @*<h4>Giá: @string.Format("{0:C}", @p.Price)</h4>*@
-        <h4>Giá: @string.Format("{0:N0} đ", @Model.Price)</h4>
+        <h4 class="caption-red">Giá: @string.Format("{0:N0} đ", @Model.Price)</h4>
+        <h4>Loại phòng: @ViewBag.loaiPhong</h4>
         <p>
             Tình trạng:
             @if (@Model.Status > 0)
             {
                 @:Đã cho thuê
-                    }
+            }
             else
             {
                 @:Còn trống
-                    }
+            }
         </p>
         <p>
             @*<a href="#" class="btn btn-primary" role="button" disabled="disabled">Thuê phòng</a>*@
