--- a/MVCQLKS/MVCQLKS/Views/Room/Detail.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Room/Detail.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MVCQLKS.Models
+@using MVCQLKS.Ultilities
 @model Room
 
 @section style{
@@ -18,7 +19,8 @@
     <div class="caption col-sm-12">
         <h3 class="caption-green">Phòng @Model.RoomName</h3>
         @*<h4>Giá: @string.Format("{0:C}", @p.Price)</h4>*@
-        <h4 class="caption-red">Giá: @string.Format("{0:N0} đ", @Model.Price)</h4>
+        @*<h4 class="caption-red">Giá: @string.Format("{0:N0} đ", @Model.Price)</h4>*@
+        <h4 class="caption-red">Giá: @Html.Price2String((decimal)Model.Price)</h4>
         <h4>Loại phòng: @ViewBag.loaiPhong</h4>
         <p>
             Tình trạng:
