Tạo View cho AddRoom
Tạo View cho AddRoom

--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/IndexManageRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/IndexManageRoom.cshtml
@@ -63,7 +63,7 @@ else
                     }
                 </tbody>
             </table>
-            <a class="btn btn-primary" href="#" title="Thêm mới sản phẩm">
+            <a class="btn btn-primary" href="@Url.Action("AddRoom","Room")" title="Thêm mới sản phẩm">
                 <i class="fa fa-plus"></i>
                 &nbsp;Thêm mới phòng
             </a>
