--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/IndexManageCategory.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/IndexManageCategory.cshtml
@@ -54,7 +54,7 @@ else
                     }
                 </tbody>
             </table>
-            <a class="btn btn-primary" href="#" title="Thêm mới sản phẩm">
+            <a class="btn btn-primary" href="@Url.Action("AddCat","Category")" title="Thêm mới sản phẩm">
                 <i class="fa fa-plus"></i>
                 &nbsp;Thêm mới danh mục phòng
             </a>
