--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                         else
                         {
                             <li class="dropdown">
-                                @*<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Html.GetUserName() <span class="caret"></span></a>*@
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Html.GetUserName() <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="@Url.Action("Profile", "Account")">Thông tin cá nhân</a></li>
                                     <li role="separator" class="divider"></li>
