Update Action trong ManageController
Update Action trong ManageController

--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -107,8 +107,8 @@
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">Quản lý</div>
-                    <a href="@Url.Action("IndexManageCategory", "ManageRoom")" class="list-group-item">Danh mục phòng</a>
-                    <a href="@Url.Action("IndexManageRoom", "ManageRoom")" class="list-group-item">Danh sách phòng</a>
+                    <a href="@Url.Action("QuanLyCat", "ManageRoom")" class="list-group-item">Danh mục phòng</a>
+                    <a href="@Url.Action("QuanLyRoom", "ManageRoom")" class="list-group-item">Danh sách phòng</a>
                 </div>
             </div>
             <div class="col-md-9">
