Tạo View cho Admin
Tạo View cho Admin

--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -89,6 +89,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Html.GetUserName() <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="@Url.Action("Profile", "Account")">Thông tin cá nhân</a></li>
+                                    <li><a href="@Url.Action("IndexManageRoom", "ManageRoom")"><i class="fa fa-id-card" aria-hidden="true"></i> Quản trị của Admin</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a id="logoutLink" href="javascript:void">Thoát</a></li>
                                 </ul>
