Thêm Controller Employ cùng 1 số action
Thêm Controller Employ cùng 1 số action

--- a/MVCQLKS/MVCQLKS/Views/Shared/_LayoutManageRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_LayoutManageRoom.cshtml
@@ -107,7 +107,7 @@
                         @RenderSection("ContentHeaderManageRoom")
                     </div>
                     <div class="panel-body">
-                        @*@RenderBody()*@
+                        @RenderBody()
                     </div>
                 </div>
             </div>
