--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -108,8 +108,8 @@
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">Quản lý</div>
-                    <a href="@Url.Action("QuanLyCat", "ManageRoom")" class="list-group-item">Danh mục phòng</a>
-                    <a href="@Url.Action("QuanLyRoom", "ManageRoom")" class="list-group-item">Danh sách phòng</a>
+                    <a href="@Url.Action("QuanLyCatChoNV", "Employ")" class="list-group-item">Danh mục phòng</a>
+                    <a href="@Url.Action("QuanLyRoomChoNV", "Employ")" class="list-group-item">Danh sách phòng</a>
                 </div>
             </div>
             <div class="col-md-9">
