Load danh sách phòng cho Admin
Load danh sách phòng cho Admin

--- a/MVCQLKS/MVCQLKS/Views/Shared/_LayoutManageRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_LayoutManageRoom.cshtml
@@ -34,7 +34,6 @@
         .table-hover tbody tr:hover td {
             background-color: #fe9;
         }
-
     </style>
 </head>
 <body>
@@ -56,7 +55,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Quản lý phòng<span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="@Url.Action("QuanLyRoom", "ManageRoom")">Quản lý phòng<span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Quản lý loại phòng</a></li>
                         <li><a href="#">Quản lý khách hàng</a></li>
                         @*<li class="dropdown">
