--- a/MVCQLKS/MVCQLKS/Views/Shared/_LayoutManageRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_LayoutManageRoom.cshtml
@@ -56,7 +56,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="@Url.Action("QuanLyRoom", "ManageRoom")">Quản lý phòng<span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Quản lý loại phòng</a></li>
+                        <li><a href="@Url.Action("QuanLyCat", "ManageRoom")">Quản lý loại phòng</a></li>
                         <li><a href="#">Quản lý khách hàng</a></li>
                         @*<li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
