--- a/MVCQLKS/MVCQLKS/Views/Employ/QuanLyRoomChoNV.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Employ/QuanLyRoomChoNV.cshtml
@@ -50,23 +50,14 @@ else
                                     @:Còn trống
                             }
                             </td>
-                            <td>
-                                <a name="aDelete" class="btn btn-danger btn-xs" href="javascript:void;" title="Xóa" data-id="@p.RoomID">
-                                    @*<i class="fa fa-close"></i>*@
-                                    <i class="fas fa-times"></i>
-                                </a>
-                                <a name="aUpdate" class="btn btn-success btn-xs" href="javascript:void;" title="Cập nhật" data-id="@p.RoomID">
-                                    <i class="fa fa-check"></i>
-                                </a>
-                            </td>
                         </tr>
                     }
                 </tbody>
             </table>
-            <a class="btn btn-primary" href="@Url.Action("AddRoom","Room")" title="Thêm mới phòng">
+            @*<a class="btn btn-primary" href="@Url.Action("AddRoom","Room")" title="Thêm mới phòng">
                 <i class="fa fa-plus"></i>
                 &nbsp;Thêm mới phòng
-            </a>
+            </a>*@
         </div>
     </div>
 }
