--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
@@ -76,7 +76,7 @@ else
                     }
                 </tbody>
             </table>
-            <a class="btn btn-primary" href="@Url.Action("AddRoom","Room")" title="Thêm mới phòng">
+            <a class="btn btn-primary" href="@Url.Action("AddRoom","ManageRoom")" title="Thêm mới phòng">
                 <i class="fa fa-plus"></i>
                 &nbsp;Thêm mới phòng
             </a>
