Chức năng DeleteRoom cho Admin
Chức năng DeleteRoom cho Admin

--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
@@ -18,6 +18,9 @@ else
 {
     <div class="row">
         <div class="col-md-12">
+            <div class="panel-headding text-center">
+                <h2>Danh sách danh mục phòng</h2>
+            </div>
             <table class="table table-striped table-hover table-condensed">
                 <thead>
                     <tr>
@@ -60,5 +63,5 @@ else
                 &nbsp;Thêm mới danh mục phòng
             </a>
         </div>
-    </div>
-                        }
+     </div>
+                    }
