--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
@@ -15,21 +15,32 @@
 
 @section script{
     <script type="text/javascript">
-
+        $('a[name ="aDelete"]').on('click', function () {
+            var pId = ($(this).data('id'));
+            $('#pId').val(pId);
+            $('#frmDelete').submit();
+        });
     </script>
 }
 
 @section ContentHeaderManageRoom{
     Danh sách phòng
 }
+
 @if (Model.Count == 0)
 {
-    @:Không có phòng
+    @:Không có danh mục phòng
 }
 else
 {
     <div class="row">
+        <form id="frmDelete" method="post" action="@Url.Action("DeleteRoom", "ManageRoom")">
+            <input id="pId" type="hidden" name="id" />
+        </form>
         <div class="col-md-12">
+            <div class="panel-headding text-center">
+                <h2>Danh sách phòng</h2>
+            </div>
             <table class="table table-striped table-hover table-condensed">
                 <thead>
                     <tr>
@@ -43,11 +54,11 @@ else
                 </thead>
                 <tbody>
                     @{
-                        int stt = 0;
+                            int stt = 0;
                     }
                     @foreach (var p in Model)
-                    {
-                        stt++;
+                        {
+                            stt++;
                         <tr>
                             <td>@stt</td>
                             <td>@p.RoomName</td>
@@ -55,13 +66,13 @@ else
                             <td>@string.Format("{0:N0} đ", @p.Price)</td>
                             <td>
                                 @if (@p.Status > 0)
-                                {
+                                    {
                                     @:Đã cho thuê
-                            }
-                                else
-                                {
+                                                                                                                                                                }
+                                    else
+                                    {
                                     @:Còn trống
-                            }
+                                }
                             </td>
                             <td>
                                 <a name="aDelete" class="btn btn-danger btn-xs" href="javascript:void;" title="Xóa" data-id="@p.RoomID">
@@ -73,7 +84,7 @@ else
                                 </a>
                             </td>
                         </tr>
-                    }
+                        }
                 </tbody>
             </table>
             <a class="btn btn-primary" href="@Url.Action("AddRoom","ManageRoom")" title="Thêm mới phòng">
@@ -82,4 +93,4 @@ else
             </a>
         </div>
     </div>
-                        }
+}
