--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
@@ -1,4 +1,6 @@
-﻿@model MVCQLKS.Models.Room
+﻿@using MVCQLKS.Models
+@*@model Room*@
+@model RoomInfo
 
 @{
     ViewBag.Title = "AddRoom";
@@ -12,37 +14,49 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="control-group">
-            @Html.LabelFor(m => m.RoomName, "Tên phòng:", new { @class = "col-md-3 control-label" })
-            <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.RoomName, new { @class = "form-control", placeholder = "Tên phòng" })
+        @if (ViewBag.ErrorMsg != null)
+        {
+            <div class="alert alert-warning alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                @ViewBag.ErrorMsg
             </div>
-        </div>
-        <div class="control-group">
-            @Html.LabelFor(m => m.CatID, "Loại phòng:", new { @class = "col-md-3 control-label" })
-            <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.CatID, new { @class = "form-control", placeholder = "Loại phòng" })
+            //<p class="error">@ViewBag.ErrorMsg</p>
+            //<p class="alert alert-warning" role="alert">@ViewBag.ErrorMsg</p>
+        }
+        @using (Html.BeginForm("AddRoom", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
+        {
+            <div class="control-group">
+                @Html.LabelFor(m => m.RoomNameInfo, "Tên phòng:", new { @class = "col-md-3 control-label" })
+                <div class="col-sm-8 form-control-static">
+                    @Html.TextBoxFor(m => m.RoomNameInfo, new { @class = "form-control", placeholder = "Tên phòng" })
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            @Html.LabelFor(m => m.Price, "Đơn giá:", new { @class = "col-md-3 control-label" })
-            <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.Price, new { @class = "form-control", placeholder = "Đơn giá" })
+            <div class="control-group">
+                @Html.LabelFor(m => m.CatIDInfo, "Loại phòng:", new { @class = "col-md-3 control-label" })
+                <div class="col-sm-8 form-control-static">
+                    @Html.TextBoxFor(m => m.CatIDInfo, new { @class = "form-control", placeholder = "Loại phòng" })
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            @Html.LabelFor(m => m.Status, "Tình trạng:", new { @class = "col-md-3 control-label" })
-            <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.Status, new { @class = "form-control", placeholder = "Tình trạng" })
+            <div class="control-group">
+                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-md-3 control-label" })
+                <div class="col-sm-8 form-control-static">
+                    @Html.TextBoxFor(m => m.PriceInfo, new { @class = "form-control", placeholder = "Đơn giá" })
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-10">
-                <button type="submit" class="btn btn-primary">
-                    <i class="fa fa-plus"></i>
-                    &nbsp;Thêm
-                </button>
+            <div class="control-group">
+                @Html.LabelFor(m => m.StatusInfo, "Tình trạng:", new { @class = "col-md-3 control-label" })
+                <div class="col-sm-8 form-control-static">
+                    @Html.TextBoxFor(m => m.StatusInfo, new { @class = "form-control", placeholder = "Tình trạng" })
+                </div>
             </div>
-        </div>
+            <div class="form-group">
+                <div class="col-sm-offset-3 col-sm-10">
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fa fa-plus"></i>
+                        &nbsp;Thêm
+                    </button>
+                </div>
+            </div>
+        }
     </div>
 </div>
