Chức năng AddCat cho Admin
Chức năng AddCat cho Admin

--- a/MVCQLKS/MVCQLKS/Views/Employ/QuanLyCatChoNV.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Employ/QuanLyCatChoNV.cshtml
@@ -38,7 +38,7 @@ else
                         <tr>
                             <td>@stt</td>
                             <td>@p.CatName</td>
-                            <td>@p.CatID</td>
+                            <td>@p.CatType</td>
                             <td>@string.Format("{0:N0} đ", @p.Price)</td>
                             <td>@p.Note</td>
                         </tr>
