--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/AddCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/AddCat.cshtml
@@ -1,4 +1,6 @@
-﻿@model MVCQLKS.Models.Category
+﻿@using MVCQLKS.Models
+@*@model Category*@
+@model CatInfo
 
 @{
     ViewBag.Title = "AddCat";
@@ -11,37 +13,49 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="control-group">
-            @Html.LabelFor(m => m.CatName, "Tên loại phòng:", new { @class = "col-md-3 control-label" })
-            <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.CatName, new { @class = "form-control", placeholder = "Tên loại phòng" })
+        @if (ViewBag.ErrorMsg != null)
+        {
+            <div class="alert alert-warning alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                @ViewBag.ErrorMsg
             </div>
-        </div>
-        <div class="control-group">
-            @Html.LabelFor(m => m.CatID, "Loại phòng:", new { @class = "col-md-3 control-label" })
-            <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.CatID, new { @class = "form-control", placeholder = "Loại phòng" })
+            //<p class="error">@ViewBag.ErrorMsg</p>
+            //<p class="alert alert-warning" role="alert">@ViewBag.ErrorMsg</p>
+        }
+        @using (Html.BeginForm("AddCat", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
+        {
+            <div class="control-group">
+                @Html.LabelFor(m => m.CatNameInfo, "Tên loại phòng:", new { @class = "col-md-3 control-label" })
+                <div class="col-sm-8 form-control-static">
+                    @Html.TextBoxFor(m => m.CatNameInfo, new { @class = "form-control", placeholder = "Tên loại phòng" })
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            @Html.LabelFor(m => m.Price, "Đơn giá:", new { @class = "col-md-3 control-label" })
-            <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.Price, new { @class = "form-control", placeholder = "Đơn giá" })
+            <div class="control-group">
+                @Html.LabelFor(m => m.CatTypeInfo, "Loại phòng:", new { @class = "col-md-3 control-label" })
+                <div class="col-sm-8 form-control-static">
+                    @Html.TextBoxFor(m => m.CatTypeInfo, new { @class = "form-control", placeholder = "Loại phòng" })
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            @Html.LabelFor(m => m.Note, "Ghi chú:", new { @class = "col-md-3 control-label" })
-            <div class="col-sm-8 form-control-static">
-                @Html.TextBoxFor(m => m.Note, new { @class = "form-control", placeholder = "Ghi chú" })
+            <div class="control-group">
+                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-md-3 control-label" })
+                <div class="col-sm-8 form-control-static">
+                    @Html.TextBoxFor(m => m.PriceInfo, new { @class = "form-control", placeholder = "Đơn giá" })
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-10">
-                <button type="submit" class="btn btn-primary">
-                    <i class="fa fa-plus"></i>
-                    &nbsp;Thêm
-                </button>
+            <div class="control-group">
+                @Html.LabelFor(m => m.NoteInfo, "Ghi chú:", new { @class = "col-md-3 control-label" })
+                <div class="col-sm-8 form-control-static">
+                    @Html.TextBoxFor(m => m.NoteInfo, new { @class = "form-control", placeholder = "Ghi chú" })
+                </div>
             </div>
-        </div>
+            <div class="form-group">
+                <div class="col-sm-offset-3 col-sm-10">
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fa fa-plus"></i>
+                        &nbsp;Thêm
+                    </button>
+                </div>
+            </div>
+        }
     </div>
 </div>
