--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
@@ -55,7 +55,7 @@ else
                         <tr>
                             <td>@stt</td>
                             <td>@p.CatName</td>
-                            <td>@p.CatID</td>
+                            <td>@p.CatType</td>
                             <td>@string.Format("{0:N0} đ", @p.Price)</td>
                             <td>@p.Note</td>
                             <td>
