Thêm 1 số hàm vào AddHelpers
Thêm 1 số hàm vào AddHelpers

--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyRoom.cshtml
@@ -72,7 +72,7 @@ else
                         <tr>
                             <td>@stt</td>
                             <td>@p.RoomName</td>
-                            <td>@p.CatID</td>
+                            <td>@Html.GetCatName(@p.CatID)</td>
                             <td>@string.Format("{0:N0} đ", @p.Price)</td>
                             <td>
                                 @if (@p.Status > 0)
