--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MVCQLKS.Models
+@using MVCQLKS.Ultilities
 @*@model Room*@
 @model RoomInfo
 
@@ -7,9 +8,17 @@
     Layout = "~/Views/Shared/_LayoutManageRoom.cshtml";
 }
 
-
 @section ContentHeaderManageRoom{
     Thêm mới phòng
+}
+
+@section script{
+    <script type="text/javascript">
+        $('.selectpicker').selectpicker({
+            //style: 'btn-info',
+            //size: 4
+        });
+    </script>
 }
 
 <div class="row">
@@ -25,32 +34,34 @@
         }
         @using (Html.BeginForm("AddRoom", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
         {
-            <div class="control-group">
-                @Html.LabelFor(m => m.RoomNameInfo, "Tên phòng:", new { @class = "col-md-3 control-label" })
-                <div class="col-sm-8 form-control-static">
-                    @Html.TextBoxFor(m => m.RoomNameInfo, new { @class = "form-control", placeholder = "Tên phòng" })
+            <div class="form-group">
+               @Html.LabelFor(m => m.RoomNameInfo, "Tên phòng:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                   @Html.TextBoxFor(m => m.RoomNameInfo, new { @class = "form-control", placeholder = "Tên phòng" })
                 </div>
-            </div>
-            <div class="control-group">
-                @Html.LabelFor(m => m.CatIDInfo, "Loại phòng:", new { @class = "col-md-3 control-label" })
-                <div class="col-sm-8 form-control-static">
-                    @Html.TextBoxFor(m => m.CatIDInfo, new { @class = "form-control", placeholder = "Loại phòng" })
-                </div>
-            </div>
-            <div class="control-group">
-                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-md-3 control-label" })
-                <div class="col-sm-8 form-control-static">
-                    @Html.TextBoxFor(m => m.PriceInfo, new { @class = "form-control", placeholder = "Đơn giá" })
-                </div>
-            </div>
-            <div class="control-group">
-                @Html.LabelFor(m => m.StatusInfo, "Tình trạng:", new { @class = "col-md-3 control-label" })
-                <div class="col-sm-8 form-control-static">
-                    @Html.TextBoxFor(m => m.StatusInfo, new { @class = "form-control", placeholder = "Tình trạng" })
+                @Html.LabelFor(m => m.CatIDInfo, "Loại phòng:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    @Html.DropDownListFor(m => m.CatIDInfo, Html.GetSLICat(), new { @class = "form-control selectpicker", placeholder = "danh mục" })
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-offset-3 col-sm-10">
+                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    @Html.TextBoxFor(m => m.PriceInfo, new { @class = "form-control", placeholder = "Đơn giá" })
+                </div>
+               @Html.LabelFor(m => m.StatusInfo, "Tình trạng:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    @*@Html.TextBoxFor(m => m.StatusInfo, new { @class = "form-control", placeholder = "Tình trạng" })*@
+
+                        <select name="tinhtrang" class="form-control selectpicker">
+                            <option>Đã cho thuê</option>
+                            <option>Còn trống</option>
+                        </select>
+                </div>
+            </div>
+          
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-primary">
                         <i class="fa fa-plus"></i>
                         &nbsp;Thêm
