--- a/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="@Url.Action("Index", "Home")">
-                        <i class="fas fa-building"></i>
+                        <i class="fas fa-building"></i>&nbsp;&nbsp;Trang chủ
                     </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
