--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/AddCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/AddCat.cshtml
@@ -11,6 +11,35 @@
     Thêm mới dannh mục phòng
 }
 
+@section style{
+    <link href="~/Content/css/bootstrap-select.min.css" rel="stylesheet" />
+    <link href="~/Content/css/jquery.bootstrap-touchspin.min.css" rel="stylesheet" />
+    <link href="~/Content/css/summernote.css" rel="stylesheet" />
+    <style type="text/css">
+    </style>
+}
+
+@section script{
+    <script src="~/Content/js/bootstrap-select.min.js"></script>
+    <script src="~/Content/js/jquery.bootstrap-touchspin.min.js"></script>
+    <script src="~/Content/js/summernote.min.js"></script>
+    <script type="text/javascript">
+        $('.selectpicker').selectpicker({
+            //style: 'btn-info',
+            //size: 4
+        });
+        $("input[name='PriceInfo']").TouchSpin({
+            initval: 500,
+            min: 500,
+            max: 1000000000,
+            stepinterval: 50,
+            maxboostedstep: 10000000,
+            prefix: 'VNĐ'
+        });
+    </script>
+
+}
+
 <div class="row">
     <div class="col-md-12">
         @if (ViewBag.ErrorMsg != null)
@@ -24,7 +53,7 @@
         }
         @using (Html.BeginForm("AddCat", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
         {
-            <div class="control-group">
+            @*<div class="control-group">
                 @Html.LabelFor(m => m.CatNameInfo, "Tên loại phòng:", new { @class = "col-md-3 control-label" })
                 <div class="col-sm-8 form-control-static">
                     @Html.TextBoxFor(m => m.CatNameInfo, new { @class = "form-control", placeholder = "Tên loại phòng" })
@@ -47,9 +76,32 @@
                 <div class="col-sm-8 form-control-static">
                     @Html.TextBoxFor(m => m.NoteInfo, new { @class = "form-control", placeholder = "Ghi chú" })
                 </div>
+            </div>*@
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.CatNameInfo, "Tên loại phòng:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    @Html.TextBoxFor(m => m.CatNameInfo, new { @class = "form-control", placeholder = "Tên loại phòng" })
+                </div>
+                @Html.LabelFor(m => m.CatTypeInfo, "Loại phòng:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    @Html.TextBoxFor(m => m.CatTypeInfo, new { @class = "form-control", placeholder = "Loại phòng" })
+                </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-offset-6 col-sm-12">
+                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    <input name="PriceInfo" type="text" class="form-control" placeholder="Đơn giá">
+                </div>
+
+                @Html.LabelFor(m => m.NoteInfo, "Ghi chú:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    @Html.TextBoxFor(m => m.NoteInfo, new { @class = "form-control", placeholder = "Ghi chú" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-primary">
                         <i class="fa fa-plus"></i>
                         &nbsp;Thêm
