--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/QuanLyCat.cshtml
@@ -66,7 +66,7 @@ else
                             <td>@p.CatName</td>
                             <td>@p.CatType</td>
                             <td>@string.Format("{0:N0} đ", @p.Price)</td>
-                            <td>@p.Note</td>
+                            <td class="dl-horizontal">@p.Note</td>
                             <td>
                                 <a name="aDelete" class="btn btn-danger btn-xs" href="javascript:void;" title="Xóa" data-id="@p.CatID">
                                     <i class="fa fa-close"></i>
